fixed button alignment on memes

--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,7 @@ body {
 }
 
 
-button {
-    margin: 20px;
-  }
+
 
 .custom-btn {
     width: 130px;
